# verified-concurrent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/vf-core/: Cargo.toml
crates/vf-core/src/: counterexample.rs  lib.rs  property.rs
crates/vf-core/src/invariants/: mod.rs  stack.rs
crates/vf-dst/: Cargo.toml
crates/vf-dst/src/: clock.rs  env.rs  fault.rs  lib.rs  random.rs  scheduler.rs
crates/vf-evaluators/: Cargo.toml
crates/vf-evaluators/src/: cascade.rs  level0_rustc.rs  level1_miri.rs  level2_loom.rs  level3_dst.rs  lib.rs  result.rs
crates/vf-examples/: Cargo.toml
crates/vf-examples/src/: lib.rs  treiber_stack.rs
crates/vf-generator/src/: generator.rs  lib.rs  prompt.rs
crates/vf-perf/: Cargo.toml
crates/vf-perf/src/: lib.rs
crates/vf-quality/: Cargo.toml
crates/vf-quality/src/: lib.rs
crates/vf-quality/src/tigerstyle/: mod.rs  naming.rs  safety.rs
crates/vf-stateright/: Cargo.toml
crates/vf-stateright/src/: lib.rs  ssi.rs  treiber_stack.rs
docs/blog/: verified-evolution.md
results/v2/: raft_consensus_best.rs  raft_consensus_best_info.json  raft_consensus_history.json  raft_election_best.rs  raft_election_best_info.json  raft_election_history.json
specs/lockfree/: treiber_stack.tla
specs/ssi/: serializable_snapshot_isolation.tla
