[package]
name = "vf-evaluators"
description = "Evaluator cascade for verified lock-free structures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vf-core.workspace = true
vf-dst.workspace = true

thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time", "fs", "io-util", "rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

[dev-dependencies]
